Sutter Health/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Philanthropy Sales Process</fullName>
        <description>Test Sales Process for Philanthropy Demo</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SHMMN Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Interest</fullName>
        </values>
        <values>
            <fullName>Negotiate</fullName>
        </values>
        <values>
            <fullName>Pending Decision</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SHP Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pending  U%2FW</fullName>
        </values>
        <values>
            <fullName>Pending AE</fullName>
        </values>
        <values>
            <fullName>Pending AM</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Pending Broker</fullName>
        </values>
        <values>
            <fullName>Pending Rates</fullName>
        </values>
        <values>
            <fullName>Sales Released</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Submitted By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Broker1__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Account Manager)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_RecordType_Name__c</fullName>
        <formula>IF(CONTAINS(Account.RecordType.Name,&apos;SHP Sales Employer&apos;),&apos;SHP Sales Employer&apos;,Account.RecordType.Name)</formula>
        <label>Account RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT( Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Members_Account__c</fullName>
        <formula>VALUE(Account.SHP_Active_Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_of_Members__c</fullName>
        <description>Req-3358
Updating Account screen for Screen Optimization for sales</description>
        <label>Actual # of Members</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acupuncture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acupuncture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Buy_Ups__c</fullName>
        <description>Req-3358</description>
        <label>Proposal Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Triple Option</fullName>
                </value>
                <value>
                    <fullName>TR &amp; Slice</fullName>
                </value>
                <value>
                    <fullName>Slice &amp; Triple Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_Membership__c</fullName>
        <formula>Probability * Projected_Membership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliates__c</fullName>
        <formula>Text(Account.Affiliates__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_hours__c</fullName>
        <description>Gives the aging Based on a 9 hours a day 5 day work week  from 8AM - 5PM.
Does not include Holiday calculation,To modify use :
9 -- replace it with number of work hors
1900-01-09 15:00:00 -- Replace this with the workday start time of organisation in GMT</description>
        <formula>IF ( IsClosed ,0, IF ((9 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW()  ) - DATE( 1900, 1, 9) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE(NOW() ) - DATE( 1900, 1, 9), 7) +
     MIN( 1, 24 / 9 * ( MOD(NOW() - DATETIMEVALUE( &apos;1900-01-09 15:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 9) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE(  CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 9 * ( MOD(  CreatedDate - DATETIMEVALUE( &apos;1900-01-09 15:00:00&apos; ), 1) ) )
    )
   ) 
  ))&gt;0,9 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW()  ) - DATE( 1900, 1, 9) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE(NOW() ) - DATE( 1900, 1, 9), 7) +
     MIN( 1, 24 / 9 * ( MOD(NOW() - DATETIMEVALUE( &apos;1900-01-09 15:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 9) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE(  CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 9 * ( MOD(  CreatedDate - DATETIMEVALUE( &apos;1900-01-09 15:00:00&apos; ), 1) ) )
    )
   ) 
  ),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>In hours , Does not count Holidays other than saturday sundays</inlineHelpText>
        <label>Aging hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a Broker</inlineHelpText>
        <label>Broker</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4)</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.Field- Broker</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>SHP Sales Broker,SHP Sales Broker Read Only, SHMMN Broker</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Contracted, Prospect, Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN, System Administrator, SHP</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_HR_HCC_ID__c</fullName>
        <description>This is created for the requirement of Req-3298: 100% Closed Won Report. Will display HealthRules HCC ID for Broker.</description>
        <formula>Broker1__r.HealthRules_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker HR HCC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Rep1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a Broker Rep</inlineHelpText>
        <label>Broker Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. Field- Broker Rep</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Broker1__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Broker_Agent_Status__c</field>
                <operation>equals</operation>
                <value>a,Active, Prospect, Contracted</value>
            </filterItems>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Broker Rep, Agent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN, System Administrator, SHP</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>contains</operation>
                <value>SHMMN Broker, SHP Sales Broker Contact,SHP Sales Broker Contact Read Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Rep_HR_HCC_ID__c</fullName>
        <description>This is created for the requirement of Req-3298: 100% Closed Won Report. Will display the HealthRules HCC ID for Broker Rep.</description>
        <formula>Broker_Rep1__r.HealthRules_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Rep HR HCC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Rep_Phone_Number__c</fullName>
        <formula>Account.Broker_Rep__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Rep Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Rep__c</fullName>
        <formula>Account.Broker_Rep__r.FirstName &amp; &quot; &quot; &amp; Account.Broker_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <formula>Account.Broker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Broker And Broker Rep field is not present on associated Account Record ,check &quot;Broker Of Record&quot; check box field for applying these values.</inlineHelpText>
        <label>Broker of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>By_Pass_Archive_Contact_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to by pass the archive contact validation while renewing the opportunities</description>
        <label>By Pass Archive Contact Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is created to bypass the validation rule for not allowing to update record id.</description>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_or_Plan_Year__c</fullName>
        <label>Calendar or Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chiropractic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chiropractic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan Information Request</fullName>
                </value>
                <value>
                    <fullName>Lead / Opportunity Out reach</fullName>
                </value>
                <value>
                    <fullName>RFP Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clearinghouse__c</fullName>
        <label>Open Enrollment</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Medical Commission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Placeholder for Competitor Information</description>
        <inlineHelpText>Enter Competitor Details</inlineHelpText>
        <label>Competitor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_s_EE__c</fullName>
        <label>Contribution(s) - EE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <description>Status of the Opportunity</description>
        <inlineHelpText>Select an Opportunity Status</inlineHelpText>
        <label>PPO Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Review</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Underwriting Decision</fullName>
                </value>
                <value>
                    <fullName>Underwriting - Mid/Large Group</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Opportunity_Shared__c</fullName>
        <label>Date Opportunity Shared</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_taken_to_close__c</fullName>
        <description>Total Business  Days taken for an opportunity to be Closed since it was opened</description>
        <label>Days taken to close</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_Exp_Close__c</fullName>
        <formula>CloseDate -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until Exp Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Contribution__c</fullName>
        <description>req 3389</description>
        <label>Dependent Contribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Campaigns_New__c</fullName>
        <label>Digital Campaigns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12-Week Stress Less</fullName>
                </value>
                <value>
                    <fullName>12-Week Weight Management</fullName>
                </value>
                <value>
                    <fullName>4-Week DeStress Your Work</fullName>
                </value>
                <value>
                    <fullName>4-Week Hydration</fullName>
                </value>
                <value>
                    <fullName>6-Month Weight Management</fullName>
                </value>
                <value>
                    <fullName>Breast cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes prevention</fullName>
                </value>
                <value>
                    <fullName>Dine on Nine–fruits &amp; vegetable series</fullName>
                </value>
                <value>
                    <fullName>Headache management</fullName>
                </value>
                <value>
                    <fullName>Healthy heart</fullName>
                </value>
                <value>
                    <fullName>Healthy pregnancy</fullName>
                </value>
                <value>
                    <fullName>Overcoming healthy lifestyle obstacles</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Smoking cessation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Campaigns__c</fullName>
        <label>Digital Campaigns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12-Week Stress Less</fullName>
                </value>
                <value>
                    <fullName>12-Week Weight Management</fullName>
                </value>
                <value>
                    <fullName>4-Week DeStress Your Work</fullName>
                </value>
                <value>
                    <fullName>4-Week Hydration</fullName>
                </value>
                <value>
                    <fullName>6-Month Weight Management</fullName>
                </value>
                <value>
                    <fullName>Breast cancer</fullName>
                </value>
                <value>
                    <fullName>Diabetes prevention</fullName>
                </value>
                <value>
                    <fullName>Dine on Nine–fruits &amp; vegetable series</fullName>
                </value>
                <value>
                    <fullName>Headache management</fullName>
                </value>
                <value>
                    <fullName>Healthy heart</fullName>
                </value>
                <value>
                    <fullName>Healthy pregnancy</fullName>
                </value>
                <value>
                    <fullName>Overcoming healthy lifestyle obstacles</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Smoking cessation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Director_of_Opportunity__c</fullName>
        <inlineHelpText>This field will capture name of employer director with whom sales team will chase opportunity.</inlineHelpText>
        <label>Director of Opportunity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Retirees__c</fullName>
        <label>Early Retirees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Exception__c</fullName>
        <label>Effective Date Exception</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>TEXT(Account.Employer_Type__c)</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <description>This field is used to capture reason of opportunities not accepted by SHP Sales Team.</description>
        <label>Error Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_time_sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First time sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <description>Changed label Total Eligible Employees From Full Time Employees Full Time Employee
Req-3358</description>
        <label>Total Eligible Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GA_Commission__c</fullName>
        <label>GA Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GA_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GA Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>SHP_Sales_Broker_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.General_Agent__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>General Agent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (GA Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Agent_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Agent Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>SHP_Sales_Broker</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>General Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (General Agent)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Renewal_Date__c</fullName>
        <description>Req 3389</description>
        <label>Group Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incumbent_Carrier_1__c</fullName>
        <description>Req-3358</description>
        <label>Incumbent Carrier #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>BLUE SHIELD</fullName>
                </value>
                <value>
                    <fullName>CAL CHOICE</fullName>
                </value>
                <value>
                    <fullName>CALPERS</fullName>
                </value>
                <value>
                    <fullName>CHINESE COMMUNITY HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>HEALTH NET</fullName>
                </value>
                <value>
                    <fullName>SELF FUNDED</fullName>
                </value>
                <value>
                    <fullName>UNITED</fullName>
                </value>
                <value>
                    <fullName>WHA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>KAISER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Carrier_2__c</fullName>
        <description>Req-3358</description>
        <label>Incumbent Carrier #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>BLUE SHIELD</fullName>
                </value>
                <value>
                    <fullName>CAL CHOICE</fullName>
                </value>
                <value>
                    <fullName>CALPERS</fullName>
                </value>
                <value>
                    <fullName>CHINESE COMMUNITY HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>HEALTH NET</fullName>
                </value>
                <value>
                    <fullName>SELF FUNDED</fullName>
                </value>
                <value>
                    <fullName>UNITED</fullName>
                </value>
                <value>
                    <fullName>WHA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>KAISER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Carrier_3__c</fullName>
        <description>Req-3358</description>
        <label>Incumbent Carrier #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>BLUE SHIELD</fullName>
                </value>
                <value>
                    <fullName>CAL CHOICE</fullName>
                </value>
                <value>
                    <fullName>CALPERS</fullName>
                </value>
                <value>
                    <fullName>CHINESE COMMUNITY HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>HEALTH NET</fullName>
                </value>
                <value>
                    <fullName>SELF FUNDED</fullName>
                </value>
                <value>
                    <fullName>UNITED</fullName>
                </value>
                <value>
                    <fullName>WHA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>KAISER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>